src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf-44.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: MT
pos: 10097
reference: A
alternative: G
gnomad_exomes_an: 0
gnomad_exomes_hom: 0
gnomad_exomes_het: 0
gnomad_exomes_hemi: 0
gnomad_genomes_an: 0
gnomad_genomes_hom: 0
gnomad_genomes_het: 0
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0
call_info:
  Case_1_father-N1-DNA1-WGS1:
    genotype: 0/0
    quality: ~
    dp: 2660
    ad: 0
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    genotype: 0/1
    quality: ~
    dp: 2188
    ad: 508
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    genotype: 0/0
    quality: ~
    dp: 1851
    ad: 0
    phasing_id: ~

