src/seqvars/query/snapshots/varfish_server_worker__seqvars__query__schema__test__sequence_variant_from_vcf-5.snap
---
source: src/seqvars/query/schema.rs
expression: "&seqvar"
---
chrom: "17"
pos: 41252695
reference: AAT
alternative: A
gnomad_exomes_an: 5066
gnomad_exomes_hom: 546
gnomad_exomes_het: 795
gnomad_exomes_hemi: 0
gnomad_genomes_an: 0
gnomad_genomes_hom: 0
gnomad_genomes_het: 0
gnomad_genomes_hemi: 0
helix_an: 0
helix_hom: 0
helix_het: 0
inhouse_an: 0
inhouse_hom: 0
inhouse_het: 0
inhouse_hemi: 0
call_info:
  Case_1_father-N1-DNA1-WGS1:
    genotype: 0/1
    quality: ~
    dp: 9
    ad: 6
    phasing_id: ~
  Case_1_index-N1-DNA1-WGS1:
    genotype: 0/0
    quality: ~
    dp: 14
    ad: 0
    phasing_id: ~
  Case_1_mother-N1-DNA1-WGS1:
    genotype: 0/0
    quality: ~
    dp: 22
    ad: 0
    phasing_id: ~

